<resources>
    <string name="app_name">Сканер актов</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Сканер актов</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="label_username">User</string>
    <string name="text_username">sa</string>
    <string name="label_password">Password</string>
    <string name="text_password">123456</string>
    <string name="label_ok">Ok</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_connection_string">Connection string</string>
    <string name="title_activity_scan_acts">ScanActsActivity</string>
    <string name="label_button_process_acts">Сканировать акты</string>
    <string name="label_button_process_agreements">Сканировать договоры</string>
    <string name="scanner_activity">ZXing Scanner - Full Activity</string>
    <string name="flash_on">Flash [ON]</string>
    <string name="flash_off">Flash [OFF]</string>
    <string name="auto_focus_on">Auto Focus [ON]</string>
    <string name="auto_focus_off">Auto Focus [OFF]</string>
    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="select_camera">Select a Camera</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>

</resources>
